deploy/k3s/lite/gateway-edge-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-edge-svc
  namespace: freeexchanged
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
  - name: http
    port: 8888
    targetPort: 8888
    nodePort: 30888
