deploy/k3s/lite/web-edge-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-edge-svc
  namespace: freeexchanged
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
