deploy/k3s/lite/delete-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: freeexchanged
$patch: delete
